crates/tui/tests/storybook/snapshots/app_prompt::prompt_history_picker_with_notification.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 515
expression: frame.text()
---

 explain the renderer layering
 open the model picker next
  info  history notice
──────────────────────────────────────────────────

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
