crates/tui/tests/storybook/snapshots/app_prompt::prompt_history_picker_with_notification.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 516
expression: frame.styles_text()
---
dim: 50 8
  2   0  50 bg=AnsiValue(237)
  3   2   4 attrs=bold
  3   8  14 attrs=dim
  4   0  50 fg=AnsiValue(237)
  5   1   1 fg=Black bg=White
  6   0  50 fg=AnsiValue(237)
  7   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  7  10  32 bg=AnsiValue(233)
  7  42   8 fg=AnsiValue(244) bg=AnsiValue(233)
