crates/tui/tests/storybook/snapshots/app_prompt::prompt_modal_picker_keeps_tip_visible.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 515
expression: frame.text()
---



 beta   second
 alpha  first
  tip ctrl+enter / ctrl+q, steer the current re…
──────────────────────────────────────────────────

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
