crates/tui/tests/storybook/snapshots/app_prompt::prompt_modal_picker_keeps_tip_visible.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 516
expression: frame.styles_text()
---
dim: 50 10
  3   8   6 attrs=dim
  4   0   8 bg=AnsiValue(237)
  4   8   5 bg=AnsiValue(237) attrs=dim
  4  13  37 bg=AnsiValue(237)
  5   0   6 fg=AnsiValue(208) attrs=bold
  5   6  19 fg=AnsiValue(244)
  5  25   2 fg=AnsiValue(244) attrs=dim
  5  27  21 fg=AnsiValue(244)
  6   0  50 fg=AnsiValue(237)
  7   1   1 fg=Black bg=White
  8   0  50 fg=AnsiValue(237)
  9   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  9  10  32 bg=AnsiValue(233)
  9  42   8 fg=AnsiValue(244) bg=AnsiValue(233)
