crates/tui/tests/storybook/snapshots/app_prompt::prompt_modal_picker_overlays_tip.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---




 beta   second
 alpha  first
──────────────────────────────────────────────────

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
