crates/tui/tests/storybook/snapshots/app_prompt::prompt_multiline_input.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---





───────────────────────────────────────────────  ─
 second line
 third line
──────────────────────────────────────────────────
