crates/tui/tests/storybook/snapshots/app_prompt::prompt_path_completion_on_tab.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 560
expression: frame.text()
---

 main.rs
 lib.rs
 bin/     directory
──────────────────────────────────────────────────
 src/
──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
