crates/tui/tests/storybook/snapshots/app_prompt::prompt_picker_with_queue_stash_and_notification.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 515
expression: frame.text()
---
 /changelog    show release notes for the latest s
 /btw          ask a side question
 /brief        summarize planned or completed chan
 /branch       fork current session
  info  queued notice
  › first follow-up
  › second follow-up
  ◌ Stashed (ctrl+s to unstash)
─ ✿ working… ─────────────────────────────────────
 /
──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
